# casual_cosmos

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE-Apache-2.0_WITH_LLVM-exception.md  LICENSE-CC0.md  README.md  compile_flags.txt  entangled.toml  mkdocs.yml
build-scripts/: clang-cl.sh
cmake/: CrossCompile.cmake  GetSDL.cmake  SetupPlatform.cmake
dev-tools/: README.md  pyproject.toml
dev-tools/tests/.entangled/: filedb.json
docs/: config.md  index.md
docs/API/: config.md  intro.md
docs/api/: config.md
docs/internal/: intro.md
docs/spec/: index.md
include/: app.h  array.h  config.h  core.h  run.h  scene.h
spec/: README.md
src/: core.c  main.c  run.c
