[tool.poetry]
name = "dev-tools"
version = "0.1.0"
description = ""
authors = ["oscar-benderstone <oscarbenderstone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
mkdocs = "^1.6.1"
entangled-cli = "^2.1.13"
mkdocs-entangled-plugin = "^0.4.0"
mkdocs-material = "^9.6.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
